# ArchMusic

./: Dockerfile  Procfile  README.md  app.json  genstring.py  pyproject.toml  requirements.txt  sample.env  setup  start
.devcontainer/: devcontainer.json
ArchMusic/: __init__.py  __main__.py
ArchMusic/core/: call.py  git.py  stream_server.py
ArchMusic/plugins/admins/: auth.py  callback.py  loop.py  mute.py  pause.py  resume.py  seek.py  shuffle.py  skip.py  stop.py  unmute.py  volume.py
ArchMusic/plugins/bot/: help.py  settings.py  start.py
ArchMusic/plugins/misc/: cleanmode.py
ArchMusic/plugins/play/: channel.py  play.py  playlist.py  playmode.py
ArchMusic/plugins/sudo/: autoend.py  blacklistchat.py  block.py  globalban.py  heroku.py  logger.py  maintenance.py  private.py  sudoers.py  vars.py  videolimit.py  videomode.py
ArchMusic/plugins/tools/: active.py  languages.py  lyrics.py  ping.py  reload.py  songs.py  speedtest.py  stats.py
ArchMusic/utils/: exceptions.py  thumbnails.py
ArchMusic/utils/inline/: play.py
ArchMusic/utils/stream/: stream.py
assets/: cookies.txt
config/: config.py
