[project]
name = "ArchMusic"
version = "2.0.0"
description = "Telegram Group Calls streaming bot with Pyrogram and Py-TgCalls"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "aiofiles",
    "aiohttp",
    "dnspython",
    "ffmpeg-python",
    "gitpython",
    "hachoir",
    "heroku3",
    "lyricsgenius",
    "motor",
    "pillow",
    "psutil",
    "pykeyboard",
    "py-tgcalls==2.2.11",
    "kurigram",
    "python-dotenv",
    "pyyaml",
    "requests",
    "speedtest-cli",
    "spotipy",
    "tgcrypto",
    "youtube-search",
    "youtube-search-python",
    "yt-dlp",
]

[tool.uv]
dev-dependencies = []
